--- a/css/main.scss
+++ b/css/main.scss
@@ -17,24 +17,25 @@ button {
 }
 
 .container {
+  // width: 95%;
   max-width: 65%;
-  width: 95%;
   margin: auto;
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
+
+  div {
+    width: 25px;
+    height: 3px;
+    background-color: #fff;
+    margin: 5px;
+  }
 }
 
 .nav {
   background-color: #131313;
-
-  .burger {
-    display: none;
-
-    div {
-      width: 25px;
-      height: 3px;
-      background-color: #fff;
-      margin: 5px;
-    }
-  }
 
   .nav-container {
     display: flex;
@@ -54,7 +55,7 @@ button {
     }
   }
 
-  ul {
+  .nav-links {
     display: flex;
     justify-content: space-around;
   }
@@ -106,6 +107,7 @@ button {
 
   .hero-header {
     font-size: 3.2rem;
+    font-size: clamp(1.2rem, calc(5vw + 1rem), 3.2rem);
     margin: 0;
   }
 
@@ -297,6 +299,55 @@ footer {
 
 @media screen and (max-width: 1324px) {
   body {
-    display: none;
+    overflow-x: hidden;
+  }
+
+  .nav-links {
+    position: fixed;
+    right: 0;
+    height: 100vh;
+    top: 80px;
+    background-color: #131313;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20%;
+    transform: translateX(100%);
+    transition: transform 200ms ease-in;
+
+    li {
+      margin: 0;
+      opacity: 0;
+    }
+  }
+
+  .burger {
+    display: block;
+  }
+
+  .active {
+    transform: translateX(0);
+  }
+
+  .toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+  .toggle .line2 {
+    opacity: 0;
+  }
+  .toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
