--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,6 @@ button {
           align-items: center;
   text-align: center;
   background-image: url("../images/hero.png");
-  background-size: cover;
 }
 
 .hero .hero-text {
@@ -124,7 +123,7 @@ button {
 
 .hero .hero-header {
   font-size: 3.2rem;
-  font-size: clamp(1.2rem, calc(5vw + 1rem), 3.2rem);
+  font-size: clamp(1.2rem, 8rem, 3.2rem);
   margin: 0;
 }
 
@@ -169,6 +168,7 @@ button {
   min-height: 320px;
   width: 60%;
   line-height: 1.6;
+  margin: 1rem auto;
 }
 
 .slice .slice-header {
@@ -208,6 +208,15 @@ button {
 
 .two-column .text-left {
   margin-right: 1.5rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.two-column .text-right {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 #contact {
@@ -336,6 +345,36 @@ footer .information {
   font-size: 0.8rem;
   margin-right: 0;
   text-align: right;
+}
+
+@media screen and (max-width: 1080px) {
+  .two-column {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+  }
+  .text-left {
+    margin-bottom: 2rem;
+  }
+  .contact-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+  }
+  .footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    height: 100%;
+  }
+  .copyright,
+  .information {
+    margin: 0;
+    padding: 1rem;
+  }
 }
 
 @media screen and (max-width: 1324px) {
