--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,6 @@ button {
 }
 
 .container {
-  // width: 95%;
   max-width: 65%;
   margin: auto;
 }
@@ -99,7 +98,7 @@ button {
   align-items: center;
   text-align: center;
   background-image: url("../images/hero.png");
-  // background-size: cover;
+  background-size: cover;
 
   .hero-text {
     margin-top: 16rem;
@@ -107,7 +106,7 @@ button {
 
   .hero-header {
     font-size: 3.2rem;
-    font-size: clamp(1.2rem, 8rem, 3.2rem);
+    font-size: 3.2rem;
     margin: 0;
   }
 
@@ -144,7 +143,6 @@ button {
   min-height: 320px;
   width: 60%;
   line-height: 1.6;
-  margin: 1rem auto;
 
   .slice-header {
     font-size: 2.4rem;
@@ -303,9 +301,35 @@ footer {
   }
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 769px) {
+  .hero-header {
+    font-size: 5em;
+  }
+
+  .hero-text {
+    font-size: 0.5em;
+  }
+
+  .two-column {
+    margin: 2rem 0;
+    padding: 0;
+  }
+
+  footer {
+    .information {
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 1025px) {
+  .container {
+    width: 100%;
+  }
+
   .two-column {
     flex-flow: column;
+    padding: 3rem 0;
   }
 
   .text-left {
@@ -325,10 +349,14 @@ footer {
   .information {
     margin: 0;
     padding: 1rem;
+    text-align: center;
   }
 }
 
-@media screen and (max-width: 1324px) {
+@media (max-width: 1324px) {
+  .container {
+    max-width: 85%;
+  }
   body {
     overflow-x: hidden;
   }
